Fix bad spacing in bibl icons for 'sources' section. #928

--- a/srophe-app/resources/css/main.css
+++ b/srophe-app/resources/css/main.css
@@ -468,7 +468,7 @@ td {
 .footnote-icon .glyphicon-book{
     padding-left:.75em;
     line-height: 18px;
-    font-size:18px;
+    font-size:16px;
     margin-top: -0.25em;
     vertical-align: middle;
     }
